--- a/messages.html
+++ b/messages.html
@@ -19,7 +19,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="#">FirstWebsite</a>
+		      <a class="navbar-brand" href="index.html">FirstWebsite</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -48,9 +48,9 @@
 				<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
 				</form>
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="index.html" target="_blank">Home</a></li>
-		        <li><a href="messages.html" target="_blank">Messages</a></li>
-		        <li><a href="profile.html" target="_blank">Profile</a></li>
+		        <li><a href="index.html">Home</a></li>
+		        <li><a href="messages.html">Messages</a></li>
+		        <li><a href="profile.html">Profile</a></li>
 		        <li><a href="https://pandora.com/" target="_blank">Pandora</a></li>
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Some More Sites <span class="caret"></span></a>
