--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		      <ul class="nav navbar-nav navbar-right">
 		        <li><a href="messages.html">Messages</a></li>
 		        <li><a href="profile.html">Profile</a></li>
+            <li><a href="blog.html">Blog</a></li>
 		        <li><a href="https://pandora.com/" target="_blank">Pandora</a></li>
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Some More Sites <span class="caret"></span></a>
